js/src/tests/test262/built-ins/Promise/reject/S25.4.4.4_A1.1_T1.js
assert
.
sameValue
(
typeof
Promise
.
reject
"
function
"
'
The
value
of
typeof
Promise
.
reject
is
expected
to
be
"
function
"
'
)
;
reportCompare
(
0
0
)
;
